add radiant and dire win rate by combinations

--- a/dota2Analytic.qmd
+++ b/dota2Analytic.qmd
@@ -4,11 +4,10 @@ title: "dota2Analytic"
 
 ## Quarto
 
-Quarto enables you to weave together content and executable code into a finished document. To learn more about Quarto see <https://quarto.org>.
-
-
 ```{python}
 import json
+import pandas as pd
+from itertools import combinations
 
 # abrindo o arquivo
 with open("heroes.json", "r") as f:
@@ -16,14 +15,6 @@ with open("heroes.json", "r") as f:
     data = json.load(f)
 
 heroes = data["heroes"]
-print(heroes)
-print(len(heroes))
-
-```
-
-```{python}
-import pandas as pd
-from itertools import combinations
 
 # Supondo que seu DataFrame seja chamado df
 df = pd.read_csv('dota2AllData.csv')
@@ -42,32 +33,78 @@ df = df[colunas_selecionadas]
 # Criação de todas as combinações possíveis de pares de heróis
 comb_pares_herois = list(combinations(colunas_herois, 2))
 
+```
+
+```{python}
+
 # Dicionário para armazenar a contagem de vitórias e partidas para cada par de heróis
-contagem_vitorias_partidas = {}
+contagem_vitorias_partidas_radiant = {}
 
 # Iteração sobre as combinações de pares de heróis
 for comb in comb_pares_herois:
     heroi1, heroi2 = comb
     df_filtrado = df[(df[heroi1] == 1) & (df[heroi2] == 1)]
 
-    ## TODO: fazer para o lado dire (-1) e somar com o radiant (1)
-    
     # Contagem de partidas e vitórias para a combinação de heróis
     total_partidas = len(df_filtrado)
     vitorias = len(df_filtrado[df_filtrado['Vencedor'] == 1])
     
     # Adicionando ao dicionário apenas se houver pelo menos uma partida
     if total_partidas > 0:
-        contagem_vitorias_partidas[comb] = {'Vitorias': vitorias, 'Partidas': total_partidas}
+        contagem_vitorias_partidas_radiant[comb] = {'Vitorias': vitorias, 'Partidas': total_partidas}
 
 # Criar uma lista classificada de combinações e taxas de vitória
-lista_classificada = sorted(contagem_vitorias_partidas.items(), key=lambda x: x[1]['Vitorias'] / x[1]['Partidas'] if x[1]['Partidas'] > 0 else 0, reverse=True)
+lista_classificada_radiant = sorted(contagem_vitorias_partidas_radiant.items(), key=lambda x: x[1]['Vitorias'] / x[1]['Partidas'] if x[1]['Partidas'] > 0 else 0, reverse=True)
+
+
+
+```
+
+```{python}
+
+# Dicionário para armazenar a contagem de vitórias e partidas para cada par de heróis
+contagem_vitorias_partidas_dire = {}
+
+# Iteração sobre as combinações de pares de heróis
+for comb in comb_pares_herois:
+    heroi1, heroi2 = comb
+    df_filtrado = df[(df[heroi1] == -1) & (df[heroi2] == -1)]
+        
+    # Contagem de partidas e vitórias para a combinação de heróis
+    total_partidas = len(df_filtrado)
+    vitorias = len(df_filtrado[df_filtrado['Vencedor'] == -1])
+    
+    # Adicionando ao dicionário apenas se houver pelo menos uma partida
+    if total_partidas > 0:
+        contagem_vitorias_partidas_dire[comb] = {'Vitorias': vitorias, 'Partidas': total_partidas}
+
+# Criar uma lista classificada de combinações e taxas de vitória
+lista_classificada_dire = sorted(contagem_vitorias_partidas_dire.items(), key=lambda x: x[1]['Vitorias'] / x[1]['Partidas'] if x[1]['Partidas'] > 0 else 0, reverse=True)
+
+
+```
+
+
+```{python}
 
 # Exibir todas as combinações e suas taxas de vitória
-for combinacao, contagem in lista_classificada:
-    taxa_vitoria = contagem['Vitorias'] / contagem['Partidas']
-    nomes_combinacao = [mapeamento_herois[heroi] for heroi in combinacao]
-    print(f"Combinação: {', '.join(nomes_combinacao)}, Vitórias: {contagem['Vitorias']}, Partidas: {contagem['Partidas']}, Taxa de Vitória: {taxa_vitoria:.2%}")
+for combinacao, contagem in lista_classificada_radiant:
+    if contagem['Partidas'] > 100:
+        taxa_vitoria = contagem['Vitorias'] / contagem['Partidas']
+        nomes_combinacao = [mapeamento_herois[heroi] for heroi in combinacao]
+        print(f"Combinação: {', '.join(nomes_combinacao)}, Vitórias: {contagem['Vitorias']}, Partidas: {contagem['Partidas']}, Taxa de Vitória: {taxa_vitoria:.2%}")
+
+```
+
+```{python}
+
+# Exibir todas as combinações e suas taxas de vitória
+for combinacao, contagem in lista_classificada_dire:
+
+    if contagem['Partidas'] > 100:
+        taxa_vitoria = contagem['Vitorias'] / contagem['Partidas']
+        nomes_combinacao = [mapeamento_herois[heroi] for heroi in combinacao]
+        print(f"Combinação: {', '.join(nomes_combinacao)}, Vitórias: {contagem['Vitorias']}, Partidas: {contagem['Partidas']}, Taxa de Vitória: {taxa_vitoria:.2%}")
 
 ```
 
